RESOLVED FIXED211529
[ContentObservation] Shutterstock search bar is not activated on the first tap
https://bugs.webkit.org/show_bug.cgi?id=211529
Summary [ContentObservation] Shutterstock search bar is not activated on the first tap
alan
Reported 2020-05-06 14:24:01 PDT
Attachments
Patch (6.47 KB, patch)
2020-05-06 14:53 PDT, alan
no flags
Patch (6.52 KB, patch)
2020-05-06 15:06 PDT, alan
no flags
alan
Comment 1 2020-05-06 14:53:29 PDT
Simon Fraser (smfr)
Comment 2 2020-05-06 14:56:25 PDT
Comment on attachment 398663 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=398663&action=review > Source/WebKit/ChangeLog:12 > + Itâs very difficult to eliminate such false positives since all we see is that some (actionable)content is going away while some (actionable)content is being created. (actionable)content > Source/WebCore/page/Quirks.cpp:808 > + return isFirstSyntheticClickOnPage && (equalLettersIgnoringASCIICase(host, "shutterstock.com") || host.endsWithIgnoringASCIICase(".shutterstock.com")); Surprised we don't have a helper for (equalLettersIgnoringASCIICase(host, "shutterstock.com") || host.endsWithIgnoringASCIICase(".shutterstock.com")) yet > Source/WebKit/WebProcess/WebPage/WebPage.cpp:3301 > + m_hasHandledSyntheticClick = false; Maybe add a comment saying that this is only used for a quirk, otherwise our future selves will forget.
alan
Comment 3 2020-05-06 15:06:01 PDT
alan
Comment 4 2020-05-06 15:06:40 PDT
> > Source/WebCore/page/Quirks.cpp:808 > > + return isFirstSyntheticClickOnPage && (equalLettersIgnoringASCIICase(host, "shutterstock.com") || host.endsWithIgnoringASCIICase(".shutterstock.com")); > > Surprised we don't have a helper for (equalLettersIgnoringASCIICase(host, > "shutterstock.com") || host.endsWithIgnoringASCIICase(".shutterstock.com")) > yet I am going to add one in a dedicated patch.
EWS
Comment 5 2020-05-06 17:18:07 PDT
Committed r261261: <https://trac.webkit.org/changeset/261261> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398671 [details].
Note You need to log in before you can comment on or make changes to this bug.