Source/WebKit/WebProcess/WebPage/WebPage.cpp
@@ -3298,6 +3298,8 @@ void WebPage::didStartPageTransition()
 
 #if PLATFORM(IOS_FAMILY)
     m_isShowingInputViewForFocusedElement = false;
+    // This is used to enable a first-tap quirk.
+    m_hasHandledSyntheticClick = false;
 #endif
 }
 
